Fix Habits overlap with header

--- a/src/app/list-habits/list-habits.component.css
+++ b/src/app/list-habits/list-habits.component.css
@@ -15,7 +15,7 @@
       overflow-y: scroll;      
       height: 455px;            
       width: 90%;
-      top: 200px;
+      top: 250px;
       position: absolute;
     }
   
